@@ -3,7 +3,7 @@
  *   LinuxSampler - modular, streaming capable sampler                     *
  *                                                                         *
  *   Copyright (C) 2003, 2004 by Benno Senoner and Christian Schoenebeck   *
- *   Copyright (C) 2005 - 2007 Christian Schoenebeck                       *
+ *   Copyright (C) 2005 - 2008 Christian Schoenebeck                       *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -57,12 +57,11 @@ class Thread {
         virtual int  SignalStartThread();
         virtual int  SignalStopThread();
 
-		inline int TestCancel() {
+        inline void TestCancel() {
 #if CONFIG_PTHREAD_TESTCANCEL
-			pthread_testcancel();
+            pthread_testcancel();
 #endif
-			return 0;
-		}
+        }
 
         virtual bool IsRunning();
         virtual int  SetSchedulingPriority(); //FIXME: should be private
@@ -145,7 +144,7 @@ class Thread {
         int             PriorityMax;
         int             PriorityDelta;
         bool            isRealTime;
-        bool            bLockedMemory;	
+        bool            bLockedMemory;
 };
 
 } // namespace LinuxSampler
